tests/paczka1/fuzzy1/71493647.err
Error in line 17: A352 A352 89,8
Error in line 23: EmmECOFVpTP A352 8,0
Error in line 21: unTuddEvxhv S216 25,8
